增添cs106L中文翻译视频资源

--- a/CS106L/CS106L课程资源.md
+++ b/CS106L/CS106L课程资源.md
@@ -6,7 +6,11 @@
 
 2020Winter  官网: [CS106L: Standard C++ Programming (stanford.edu)](https://web.stanford.edu/class/archive/cs/cs106l/cs106l.1204/lectures.html)
 
-# 视频资源
+# 中文翻译视频
+
+[b站up alexphil翻译的CS106L, 支持up](https://www.bilibili.com/video/BV1fu4m1N77y/?spm_id_from=333.999.0.0)
+
+# 原版视频资源
 
 2019  https://www.youtube.com/playlist?list=PLCgD3ws8aVdolCexlz8f3U-RROA0s5jWA
 
